Updating swagger configs
